in case of fire

--- a/Healthcare_Provider_Fraud.ipynb
+++ b/Healthcare_Provider_Fraud.ipynb
@@ -4298,6 +4298,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2. Combining Dataframes"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
